@@ -1,4 +1,5 @@
 1.0.0
+Fixed frame extents prop.
 Made frame move more responsive.
 Added _NET_FRAME_EXTENTS prop to windodows.
 Fixed visual glitch when not using theme.
